# csvjson_test

./: .gitignore  CMPT473 A2 v2.xml  CMPT473 A2.xml  CMakeLists.txt
Test/: CMakeLists.txt  RunTest.cpp  TestHarness.cpp  csvjsonTest_main.cpp
TestData/: CMakeLists.txt
TestData/ExpectedMessages/: isValidOption.txt
TestData/ExpectedOutput/: .~lock.CMPT473-output v2.xls#  CMPT473-output v2.xls  CMPT473-output.xls  CSVJSON_Test-output.xls  CSVJSON_Test.xml  output1.json
TestData/TestFiles/: Test_flaggedDelimiter.txt  Test_flaggedIndent.txt  Test_flaggedVerbose.txt  Test_isDefault.txt  Test_isValidCsv.txt  Test_isValidPath.txt  input1.csv  input2.csv  input3.csv  isValidOption.txt
TestData/TestFiles/DummyData/: data.txt
TestOutput/: CMakeLists.txt
TestOutput/Files/: Test_flaggedDelimiter.json  Test_flaggedIndent.json  Test_isValidCsv.json  input3.json
TestOutput/Messages/: Test_flaggedVerbose.txt  Test_isValidPath.txt
test/: csvjsonTest_main.cpp
tool/: CMakeLists.txt  csvjsonTest_main.cpp
